Fix spacing

--- a/core/app/assets/stylesheets/users/profile.css.less
+++ b/core/app/assets/stylesheets/users/profile.css.less
@@ -18,7 +18,7 @@
   }
 
   .profile-box-container {
-    width: 48%;
+    width: 49%;
     float: left;
     background: @backgroundGray;
     padding: 10px 20px 20px;
